@@ -132,7 +132,7 @@
 <p>caption test #3</p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
-<div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">http://example.com/</a> link</div>
+<div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">[1]</a> link</div>
 </div>
 </div>
 <p>caption test #4</p>
@@ -150,7 +150,7 @@
 <p>caption test #6</p>
 <div class="thumb tright">
 <div class="thumbinner" style="width:222px"><a class="wikiimg" href="/wiki/en/Image:Test_Image.jpg"><img class="wikiimg" src="/files/resized/test_image-300px.jpg" width="220" height="147" alt="Test Image.jpg" /></a>
-<div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">http://example.com/</a></div>
+<div class="thumbcaption">Caption with a <a class="externallink" rel="nofollow" href="http://example.com/">[2]</a></div>
 </div>
 </div>
 <p>caption test #7</p>
