@@ -8,3 +8,5 @@ http://www.google.com
 [http://www.google.com Multiple word caption]
 
 [http://www.google.com '''Bold caption''']
+
+[http://www.google.com]
