@@ -111,6 +111,7 @@ admin.parser.caption.allowhtml=Allow HTML
 admin.parser.caption.allowjavascript=Allow Javascript
 admin.parser.caption.allowtemplates=Allow Wiki templates
 admin.parser.caption.interwikiinline=Display interwiki links inline
+admin.parser.caption.numberedhtmllinks=Use numbered HTML links
 admin.parser.caption.signaturedate=Pattern for dates in signatures
 admin.parser.caption.signatureuser=Pattern for user name in signatures
 admin.parser.caption.tableofcontents=Use table of contents
@@ -118,6 +119,7 @@ admin.parser.caption.tableofcontentsdepth=Maximum table of contents depth
 admin.parser.caption.virtualwikiinline=Display virtual wiki links inline
 admin.parser.help.allowcapitalized=Treat capitalized and lowercase topics as the same value.  If this option is not selected then "Topic" and "topic" are treated as two different records.  Note that even if this option is enabled it is still possible to create two topics that vary only in capitalization, in which case the records will be treated as two distinct topics.
 admin.parser.help.interwikiinline=If this option is selected then all interwiki links will be displayed inline with article text.  If it is not selected then interwiki links will be displayed in a box in the left navigation (links preceded by a colon such as "[[\:interwiki\:Topic]]" will always be displayed inline).
+admin.parser.help.numberedhtmllinks=Select this option to display HTML links of the form "[http://example.com]" using numbered links such as "[1]".  De-selecting this option will cause the URL to be displayed as the link text.
 admin.parser.help.signaturedate=Date pattern used with signatures.
 admin.parser.help.signatureuser=Key\: {0} \= user page; {1} \= user contributions page; {2} \= user comments page; {3} \= user login; {4} \= user display name; {5} \= user email; {6} \= user id
 admin.parser.help.tableofcontentsdepth=Set this value from 1-6 to determine how much nesting is allowed within a topic's table of contents.
