@@ -87,6 +87,9 @@ followed by 0.6.3.
 
   * This release updates the default StyleSheet topic.  See below for
     instructions on manaully updating this topic with the new styles.
+  * HTML links of the form "[http://example.com]" will now display using
+    numbered links to match Mediawiki behvior.  The legacy behavior can be
+    restored from the "Parser" tab of the Special:Admin page.
 
   UPGRADE STEPS:
 
